--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <img id="ham-size" src="/imgProdutos/hamb-1semfundo.png" alt="Hambúrguer Smash">
             <div class="menu-item-content">
                 <h3>Brioche Clássico </h3>
-                <p> prato e maionese da casa.</p>
+                <p>Pão levinho de fermentação natural de trigo, burger 160g, queijo prato e maionese da casa.</p>
                 <div class="price">
                     <p class="price"> <strong>R$ 15.99</strong></p>
                 </div>
